fix: enhance scrollbar appearance

--- a/packages/dnb-eufemia/src/style/core/utilities.scss
+++ b/packages/dnb-eufemia/src/style/core/utilities.scss
@@ -147,36 +147,42 @@ $focusRingColor: var(--color-emerald-green);
 }
 
 @mixin scrollbarAppearance() {
-  scrollbar-width: thin;
-
   // older iOS safari
   -webkit-overflow-scrolling: touch;
 
   // show scrollbar in IE & Edge
   -ms-overflow-style: auto;
 
-  scrollbar-color: var(--color-sea-green) transparent;
+  // NB: We have used "scrollbar-track-width: auto;" before,
+  // first, it only effects Firefox.
+  // But "thin" changes the behavior in Windows,
+  // so it has no arrow buttons, and a wired "pressed" color.
+  // Also, on macOS, it changes the scrollbar to be so small,
+  // that e.g. the textarea resize grabber gets way smaller.
+
+  scrollbar-color: var(--scrollbar-thumb-color, #888) transparent;
 
   @supports not (scrollbar-color: auto) {
     // stylelint-disable
     &::-webkit-scrollbar {
       &:vertical {
-        width: 0.5rem;
+        width: var(--scrollbar-track-width, 0.5rem);
       }
       &:horizontal {
-        height: 0.5rem;
+        height: var(--scrollbar-track-width, 0.5rem);
       }
 
-      background-color: var(--color-black-8);
+      border-radius: var(--scrollbar-thumb-width, 0.5rem);
+      background-color: var(--scrollbar-track-color, #eee);
     }
     &::-webkit-scrollbar-thumb {
-      background-color: var(--color-sea-green);
+      background-color: var(--scrollbar-thumb-color, #888);
 
       &:hover {
-        background-color: var(--color-emerald-green);
+        background-color: var(--scrollbar-thumb-hover-color, #666);
       }
 
-      border-radius: 0.5rem;
+      border-radius: var(--scrollbar-thumb-width, 0.5rem);
     }
     // stylelint-enable
   }
